[package]
name = "dioxus-use-computed"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Run resource-expensive computations in the most efficient way possible in Dioxus 🧬 apps 🦀"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-use-computed"
repository = "https://github.com/dioxus-community/dioxus-use-computed"
keywords = ["dioxus"]
categories = ["gui"]

[dependencies]
dioxus-lib = { version = "0.6.0", default-features = false, features = ["macro", "hooks", "signals"] }
warnings = "0.2.1"

[dev-dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
